Set setRoles after roles are reset in trino-jdbc
Information from X-Trino-Set-Role should be stored
even after setting or resetting authorized user.
This is also aligned with the order of operations in
trino-cli

(cherry picked from commit d997caa23c0cea9ae280acb9ebb08c6389a5cce6)